# event-service

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  specification.yaml
.github/workflows/: deploy_webserver.yml  test.yml
app/: main.py
app/adapters/: __init__.py  competition_formats_adapter.py  contestants_adapter.py  events_adapter.py  liveness_adapter.py  raceclasses_adapter.py  raceclasses_config_adapter.py  results_adapter.py
app/authorization/: __init__.py  authorization.py
app/commands/: __init__.py  contestants_commands.py  events_commands.py
app/models/: __init__.py  competition_format_model.py  contestant_model.py  event_model.py  raceclass_model.py  raceclasses_config_model.py  result_model.py
app/routers/: contestants.py  contestants_commands.py  contestants_search.py  events.py  events_commands.py  ping.py  raceclasses.py  ready.py  results.py
app/services/: __init__.py  contestants_service.py  events_service.py  exceptions.py  raceclasses_service.py  results_service.py
app/utils/: __init__.py
event_service/: __init__.py  app.py  gunicorn_config.py
event_service/adapters/: __init__.py  adapter.py  competition_formats_adapter.py  contestants_adapter.py  event_format_adapter.py  events_adapter.py  raceclasses_adapter.py  raceclasses_config_adapter.py  results_adapter.py  users_adapter.py
event_service/commands/: __init__.py  contestants_commands.py  events_commands.py
event_service/config/: raceclasses_config.json
event_service/models/: __init__.py  competition_format_model.py  contestant_model.py  event_model.py  raceclass_model.py  raceclasses_config_model.py
event_service/services/: __init__.py  contestants_service.py  event_format_service.py  events_service.py  exceptions.py  raceclasses_service.py  results_service.py
event_service/utils/: db_utils.py  validate_ageclass.py
event_service/views/: __init__.py  competition_formats.py  contestants.py  contestants_commands.py  contestants_search.py  event_format.py  events.py  events_commands.py  liveness.py  raceclasses.py  results.py
scripts/: README.md  load_competition_formats.py
scripts/files/: competition_formats.json
src/event_service/: app.py
src/event_service/adapters/: __init__.py  ageclasses_adapter.py  competition_formats_adapter.py  contestants_adapter.py  events_adapter.py  raceclasses_adapter.py
src/event_service/commands/: __init__.py  contestants_commands.py  events_commands.py
src/event_service/models/: __init__.py  ageclass_model.py  competition_format_model.py  contestant_model.py  event_model.py  raceclass_model.py
src/event_service/security/: __init__.py  security.py
src/event_service/services/: __init__.py  ageclasses_service.py  competition_formats_service.py  contestants_service.py  event_format_service.py  events_service.py  raceclasses_service.py
src/event_service/views/: __init__.py  ageclasses.py  competition_formats.py  contestants.py  contestants_commands.py  event_format.py  events.py  events_commands.py  login.py  raceclasses.py  utils.py
tests/: conftest.py
tests/contract/: test_ageclasses.py  test_assign_bibs.py  test_assign_bibs_start_on_100.py  test_competition_formats.py  test_contestants.py  test_contestants_i_sonen.py  test_contestants_sportsadmin.py  test_event_format.py  test_events.py  test_generate_ageclasses_on_event.py  test_generate_raceclasses_on_event.py  test_ping.py  test_raceclasses.py  test_ready.py  test_results.py
tests/files/: competition_format_individual_sprint.json  contestants_G11.csv  contestants_G11_Sportsadmin.csv  contestants_G11_invalid_registration_date_time.csv  contestants_G11_invalid_registration_time.csv  contestants_G11_no_minidrett_id.csv  contestants_G11_with_failures.csv  contestants_Sportsadmin.csv  contestants_ageclass_all_literals.csv  contestants_eventid_364892.csv  contestants_iSonen.csv  contestants_unsupported_format.csv  event.json  expected_contestants_list.json  race_settings.json  results.json
tests/integration/: test_ageclasses.py  test_assign_bibs_to_contestants.py  test_competition_formats.py  test_contestants.py  test_event_format.py  test_events.py  test_generate_ageclasses_on_event.py  test_generate_raceclasses_on_event.py  test_generate_racelasses_on_event.py  test_login.py  test_ping.py  test_raceclasses.py  test_ready.py  test_results.py
tests/unit/: test__assign_default_values_to_raceclasses.py  test__create_raceclass_name.py  test_event_service.py  test_security.py  test_validate_ageclass.py
