[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Heming Harnæs <heming.harnaes@gmail.com"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "An API for admin of sporting events"
homepage = "https://github.com/langrenn-sprint/event-service"
license = "Apache-2.0"
name = "event-service"
readme = "README.md"
repository = "https://github.com/langrenn-sprint/event-service"
version = "1.1.0"

[tool.poetry.dependencies]
aiohttp = "3.8.6"
aiohttp-jinja2 = "^1.5"
aiohttp-middlewares = "^2.2.0"
aiohttp-session = "^2.9.0"
aioresponses = "^0.7.2"
click = "^8.1.3"
cryptography = "^39"
flake8-bugbear = "^23.2.13"
gunicorn = "^20.0.4"
marshmallow = "^3.18.0"
motor = "^3.1.1"
multidict = "^6"
nox = "^2022"
nox-poetry = "^1.0.1"
PyJWT = "^2.6.0"
python = ">=3.9,<3.12"
python-dotenv = "^0.21"
requests = "^2.28.1"
types-setuptools = "^67.6.0.7"
dataclasses-json = "^0.5.7"
pandas = "^2.1.3"
python-json-logger = "^2.0.7"
pytest = "^7.4.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^1"
aioresponses = "^0.7.2"
black = "^22"
codecov = "^2.1.10"
coverage = "^7.2.1"
docker-compose = "^1.29"
flake8-annotations = "^3"
flake8-bandit = "^4"
flake8-black = "^0.3"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^1.0.1"
packaging = "^21"
pep8-naming = "^0.13"
pytest = "^7.2.0"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.0"
pytest-mock = "^3.3.1"
safety = "^2.3.5"
pyyaml = "5.3.1"
[tool.coverage.paths]
source = ["event_service", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*gunicorn_config.py"]
source = ["event_service"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"